# breadcrumb

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
api/: ai.ts
src/: App.tsx  Buoy.tsx  ai.ts  db.ts  index.css  shortcuts.ts  types.ts  useDriftDetection.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.txt  icon.icns
src-tauri/src/: main.rs
