[package]
name = "breadcrumb"
version = "0.1.0"
description = "A low-friction ADHD working-memory companion"
authors = ["Baidi Wang"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
# Read the frontmost app NAME only (never content) via AppKit.
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }
objc2-foundation = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]
